# scalable_fastapi_todolist

./: README.md  TODO.md  docker-compose.debug.yml  docker-compose.yml
auth_api/: Dockerfile  Dockerfile.debug  main.py  pyproject.toml
auth_api/data/: db_query_utils.py  redis_query_utils.py
auth_api/queuing/: user_credentials_publisher.py
auth_api/routers/: auth.py
shared/clients/: auth_client.py  users_client.py
shared/lib/: application_variables.py  constants.py  fastapi_utils.py  rabbitmq_utils.py
shared/lib/rabbitmq_client/: rabbitmq_exchange_client.py
todo_api/: Dockerfile  Dockerfile.debug  main.py  pyproject.toml
todo_api/routers/: user_items.py
users_api/: Dockerfile  Dockerfile.debug  main.py  pyproject.toml
users_api/data/: db_query_utils.py  redis_query_utils.py
users_api/queuing/: user_publisher.py
users_api/routers/: auth.py  users.py
